--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ncurses = "6.0.1"
-pancurses = "*"
+# ncurses = "6.0.1"
+# pancurses = "*"
+cursive = "*"
+ahash = "0.8"
+rand = "0.8"
