--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "anu-rs"
 version = "0.1.0"
 edition = "2021"
+description = "anu sequencer"
+authors = ["karnpapon <karnpapon@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/karnpapon/anu-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# ncurses = "6.0.1"
-# pancurses = "*"
 cursive = "*"
-ahash = "0.8"
 rand = "0.8"
+lazy_static = "1.5.0"
