--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ cursive = "*"
 lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
+unicode-width = "0.1.13"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
