--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
 unicode-width = "0.1.13"
+rand = "0.8"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
