--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dirs = "5.0.1"
 cfonts = "1.2.0"
 unicode-width = "0.1.13"
 rand = "0.8"
+num = "0.4.3"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
