--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ cfonts = "1.2.0"
 unicode-width = "0.1.13"
 rand = "0.8"
 num = "0.4.3"
-crossbeam-utils = "0.8"
+crossbeam = "0.8.4"
 atomic-wait = "1.1.0"
 
 [profile.release]
