--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/karnpapon/anu-rs"
 
 [dependencies]
 cursive = "*"
+cursive-tabs = "^0"
 lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
