--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
 # unicode-width = "0.1.13"
+log = "0.4.22"
 rand = "0.8"
 num = "0.4.3"
 crossbeam = "0.8.4"
