--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ atomic-wait = "1.1.0"
 midir = "0.9.1"
 regex = "1.10.6"
 serde = "1.0.210"
+cpal = "0.15.3"
+hound = "3.5.1"
+nom = "7.1.3"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
