--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ cursive-tabs = "^0"
 lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
-# unicode-width = "0.1.13"
 log = "0.4.22"
 rand = "0.8"
 num = "0.4.3"
@@ -27,6 +26,8 @@ serde = "1.0.210"
 cpal = "0.15.3"
 hound = "3.5.1"
 nom = "7.1.3"
+nom_locate = "4.0.0"
+rosc = "0.8.1"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
