--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,18 @@ lazy_static = "1.5.0"
 dirs = "5.0.1"
 cfonts = "1.2.0"
 log = "0.4.22"
-rand = "0.8"
 num = "0.4.3"
 crossbeam = "0.8.4"
-atomic-wait = "1.1.0"
 midir = "0.9.1"
 regex = "1.10.6"
 serde = "1.0.210"
-cpal = "0.15.3"
-hound = "3.5.1"
 nom = "7.1.3"
 nom_locate = "4.0.0"
 rosc = "0.8.1"
+# cpal = "0.15.3"
+# atomic-wait = "1.1.0"
+# hound = "3.5.1"
+# rand = "0.8"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
