--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ codegen-units = 1 # Compile crates one after another so the compiler can optimiz
 lto = true        # Enables link to optimizations
 opt-level = "z"   # Optimize for binary size
 strip = true      # Remove debug symbols
+
+[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH",
+]
