--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = "1.0.210"
 nom = "7.1.3"
 nom_locate = "4.0.0"
 rosc = "0.8.1"
+rand = "0.8.5"
 
 [profile.release]
 panic = "abort"   # Strip expensive panic clean-up logic
