--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,11 @@ repos:
       entry: cargo fmt -- --check
       language: system
       pass_filenames: false
-    # - id: rust-clippy
-    #   name: Rust Lint (clippy)
-    #   entry: cargo clippy -- -D warnings
-    #   language: system
-    #   pass_filenames: false
+    - id: rust-clippy
+      name: Rust Lint (clippy)
+      entry: cargo clippy -- -D warnings -A dead_code
+      language: system
+      pass_filenames: false
     - id: rust-test
       name: Run Rust Unit Tests
       entry: cargo test
